--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-server></app-server>
+<app-servers></app-servers>
 <hr>
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
