--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,7 @@
+<label>Server Name</label>
+<input type="text" (input)="onUpdateServerName($event)">
+<p>{{ serverName }}</p>
+<br>
 <button [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
 <p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
