--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,5 +1,9 @@
 <label>Server Name</label>
+<br>
 <input type="text" (input)="onUpdateServerName($event)">
+<br>
+<input type="text" [(ngModel)]="serverName">
+<br>
 <p>{{ serverName }}</p>
 <br>
 <button [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
