--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<app-servers></app-servers>
-<hr>
-<h1>{{ title }}</h1>
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <app-servers></app-servers>
+            <hr>
+            <h1>{{ title }}</h1>
+        </div>
+    </div>
+</div>
